<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipe.RecipeActivity"
    android:configChanges="orientation|screenSize">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/recipe_name"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/description"
                android:textSize="20sp"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/description_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </androidx.fragment.app.FragmentContainerView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ingredients"
                android:textSize="20sp" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/ingredients_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </androidx.fragment.app.FragmentContainerView>

            <TextView
                android:id="@+id/ingredients_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/link_textView"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>